feat : update data

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         </div>
         
         <div class="input-section">
-            <h2>⚙️ ตั้งค่าการเทรด</h2>
+            <h2>⚙️ ใส่ค่าเริ่มต้นในการคำนวน</h2>
             <div class="input-grid">
                 <div class="input-group">
                     <label for="initialBalance"><span class="icon">💰</span>ทุนเริ่มต้น ($)</label>
